styles.css
body {
	margin: 0px;
	display: grid;
	grid-template-columns: 100vw;
	grid-template-rows: 15vh 85vh;
	touch-action: none;
	background: black;
	color: white;
	/*font-size: 5vh;*/
	height: 100vh;
}

#top {
	display: grid;
	grid-template-columns: 15vh 1fr 4fr;
	background: tan;
}

#hub {
	height: 15vh;
	aspect-ratio: 1/1;
	background: skyblue;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	box-sizing: border-box;
	border-right: solid;
	font-size: 3vh;
}

#divSetPlayerNumber {
	display: grid;
	grid-template-rows: 1fr 2fr;
	grid-template-areas:
		"title title title title title"
		"p1 p2 p3 p4 p5";
	gap: 5px;
	padding: 5px;
}

#nop_title {
	grid-area: title;
	display: flex;
	align-items: center;
	justify-content: center;
}

label {
	display: flex;
	align-items: center;
	justify-content: center;
	user-select: none;
	color: black;
}
input {
	display: none;
}
input+label {
	background: snow;
}
input[type="radio"]:checked+label {
	background: yellow;
}
input[type="checkbox"]:checked+label {
	background: red;
}

#title {
	display: flex;
	align-items: center;
	justify-content: space-around;
	font-size: 7vh;
}

#dl {
	font-size: 3vh;
	text-align: center;
}

#players {
	display: flex;
	flex-direction: row;
	align-items: flex-end;
	justify-content: center;
}

.player {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	/*grid-template-rows: 30vh 10vh 45vh;*/
	width: min(50vw, 100%);
	min-width: 20vw;
	height: 100%;
	box-sizing: border-box;
	border: solid 10px;
}

.image_library {
	display: flex;
	align-items: center;
	justify-content: center;
	background: snow;
}

.word {
	display: flex;
	text-align: center;
	align-items: center;
	justify-content: center;
	background: white;
	color: black;
	font-size: 5vh;
}

.keyboard {
	display: grid;
	background: gray;
	margin-top: auto;
	grid-template-areas:
		"a b c d e f g"
		"h i j k l m n"
		"o p q r s t u"
		"v w x y z period ok"
		". space space space bs bs ok";
	grid-template-columns: repeat(7, 1fr);
	grid-template-rows: repeat(5, 1fr);
	gap: 5px;
	padding: 5px;
}

.key {
	background: pink;
	font-family: serif;
	font-size: 1.5vh;
}

.buttonBackSpace {
	background: red;
}

#buttonReset {
	align-self: center;
	display: flex;
	align-items: center;
	justify-content: center;
	width: 50%;
	max-height: 10vh;
	font-size: 5vh;
	margin-top: auto;
}

button:disabled {
	background: darkgray;
}

img {
	width: 100%;
	max-height: 50vh;
	object-fit: contain;
}

